added bank and supplier interfaces
