# cse-logistics/api/controllers/supply.js
@@ -1,7 +1,9 @@
 'use strict';
 
 module.exports = {
-  supply: supply
+  supply: supply,
+  supplies: supplies,
+  confirm: confirm,
 };
 
 const db = require('./surreal.js');
@@ -9,29 +11,31 @@ const db = require('./surreal.js');
 // create a new supply order
 function supply(req, res) {
     const order = req.swagger.params.supply.value;
+    const time = new Date().toISOString();
+    // create a new supply order in the e-commerce database
+    db.create('supply', {orderID: order.orderID, trxID: order.trxID, amount: order.amount, status: 'Pending', cart: order.cart, time: time}).then((result) => {
+        res.json(result[0].id);
+    }).then((result) => {
+        console.log(result);
+    });
+}
 
-    // validate the transaction id with the bank API that the transaction actually took place
-    const response = fetch('http://localhost:10020/validate' , {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-                'Accept': 'application/json'
-            },
-            body: JSON.stringify({ trxID }),
-        }).then((result) => {
 
-            if(result){
+// get all supply orders
+function supplies(req, res) {
+    db.query('select * from supply order by time desc').then((result) => {
+        res.json(result[0].result);
+    }).catch((err) => {
+        res.json(err);
+    });
+}
 
-                // create a new supply order in the e-commerce database
-                db.create('supply', {email: order.email, trxID: order.trxID, cart: order.cart}).then((result) => {
-                    res.json(result[0].id);
-                })
-            } else{
-
-                // if the transaction id is invalid, throw an error
-                throw new Error('Invalid transaction ID');
-            }
-        }).catch((err) => {
-            res.json(err);
-        });
+// confirm a supply order
+function confirm(req, res) {
+    const order = req.swagger.params.order.value;
+    db.merge(order.orderID, {status: 'Confirmed'}).then((result) => {
+        res.json(result);
+    }).catch((err) => {
+        res.json(err);
+    });
 }
